add Personal Page title

--- a/restaurant/templates/main_page.html
+++ b/restaurant/templates/main_page.html
@@ -135,10 +135,12 @@
         <img src="decor.svg" alt="Декор" class="decor">
 
         <!-- Шапка -->
+         
         <nav>
             <div class="nav-left">
                 <a href="#">О нас</a>
                 <a href="#">Меню</a>
+                <a href="#">Личный кабинет</a> <!-- Добавленный пункт -->
             </div>
 
             <!-- Логотип в центре -->
