add link to About us page

--- a/restaurant/templates/main_page.html
+++ b/restaurant/templates/main_page.html
@@ -126,7 +126,6 @@
             bottom: 7%;
             right: 14%;
         }
-
     </style>
 </head>
 <body>
@@ -135,10 +134,9 @@
         <img src="decor.svg" alt="Декор" class="decor">
 
         <!-- Шапка -->
-         
         <nav>
             <div class="nav-left">
-                <a href="#">О нас</a>
+                <a href="about_us_page.html">О нас</a> 
                 <a href="#">Меню</a>
                 <a href="#">Личный кабинет</a> <!-- Добавленный пункт -->
             </div>
