--- a/restaurant/templates/main_page.html
+++ b/restaurant/templates/main_page.html
@@ -131,7 +131,7 @@
 <body>
     <div class="container">
         <!-- Декоративное изображение сверху -->
-        <img src="decor.svg" alt="Декор" class="decor">
+        <img src="images/decor.svg" alt="Декор" class="decor">
 
         <!-- Шапка -->
         <nav>
@@ -143,7 +143,7 @@
 
             <!-- Логотип в центре -->
             <div class="nav-center">
-                <img src="cat.svg" alt="Логотип" class="nav-logo">
+                <img src="images/cat.svg" alt="Логотип" class="nav-logo">
             </div>
 
             <div class="nav-right">
