--- a/restaurant/templates/menu.html
+++ b/restaurant/templates/menu.html
@@ -8,7 +8,7 @@
         /* Основные стили */
         body {
             font-family: 'Montserrat Alternates', sans-serif;
-            background-image: url('background1.png');
+            background-image: url('images/background1.png');
             background-size: 50%;
             background-position: center;
             color: black;
@@ -36,7 +36,7 @@
 
         /* Шапка */
         .header {
-            background-image: url('background.png');
+            background-image: url('images/background.png');
             background-size: cover;
             background-position: center;
             text-align: center;
@@ -74,7 +74,7 @@
             justify-content: center;
             gap: 70px;
             padding: 20px;
-            background-image: url('background1.png');
+            background-image: url('images/background1.png');
             background-size: cover;
             background-position: center;
             position: relative;
@@ -204,7 +204,7 @@
     <div class="header">
         <div class="header-content">
             <h1>Menü</h1>
-            <img src="cat.svg" alt="Cat" class="header-cat">
+            <img src="images/cat.svg" alt="Cat" class="header-cat">
         </div>
         <h2>Меню</h2>
     </div>
