--- a/restaurant/templates/about_us_page.html
+++ b/restaurant/templates/about_us_page.html
@@ -10,7 +10,7 @@
         
         body {
             font-family: 'Montserrat Alternates', sans-serif;
-            background-image: url('background1.png');
+            background-image: url('images/background1.png');
             background-size: 50%;
             background-position: center;
             color: black;
@@ -40,7 +40,7 @@
         }
 
         .header {
-            background-image: url('background.png');
+            background-image: url('images/background.png');
             background-size: cover;
             background-position: center;
             padding: 20px 0;
@@ -291,7 +291,7 @@
     <div class="header">
         <div class="container">
             <h1>Hakkımızda</h1>
-            <img src="cat.svg" alt="Cat Image">
+            <img src="images/cat.svg" alt="Cat Image">
             <h2>О нас</h2>
         </div>
     </div>
@@ -314,10 +314,10 @@
                     <p>Я поняла: хочу создать <strong>такое же место</strong>. Так появился <strong>«Кошачий сад»</strong> – ресторан, где каждый может почувствовать себя <br>в уютном турецком дворике, окруженном <strong>зеленью</strong> и <strong>мурчащими друзьями</strong>.</p>
                 </div>
                 <div class="gallery">
-                    <img src="image1.png" alt="Фото 1">
-                    <img src="image2.png" alt="Фото 2">
-                    <img src="image3.png" alt="Фото 3">
-                    <img src="image4.png" alt="Фото 4">
+                    <img src="images/image1.png" alt="Фото 1">
+                    <img src="images/image2.png" alt="Фото 2">
+                    <img src="images/image3.png" alt="Фото 3">
+                    <img src="images/image4.png" alt="Фото 4">
                 </div>
             </div>
         </div>
@@ -330,10 +330,10 @@
                 <div class="feature-text left">
                     <p><strong>Коты</strong> – настоящие хозяева кафе. Они мирно дремлют на подушках, встречают гостей и создают уют.</p>
                 </div>
-                <img src="cat.png" alt="Коты">
+                <img src="images/cat.png" alt="Коты">
             </div>
             <div class="feature-item">
-                <img src="garden.png" alt="Сад">
+                <img src="images/garden.png" alt="Сад">
                 <div class="feature-text right">
                     <p><strong>Сад</strong> на крыше, утопающий в зелени. Мягкие подушки, фонарики и вид на закат.</p>
                 </div>
@@ -342,10 +342,10 @@
                 <div class="feature-text left">
                     <p>Аутентичная <strong>восточная кухня</strong>: пахлава, кебабы, мезе и традиционные турецкие завтраки.</p>
                 </div>
-                <img src="food.png" alt="Кухня">
+                <img src="images/food.png" alt="Кухня">
             </div>
             <div class="feature-item">
-                <img src="tea.png" alt="Чай">
+                <img src="images/tea.png" alt="Чай">
                 <div class="feature-text right">
                     <p><strong>Турецкий чай и кофе</strong> подаются в традиционных чашках – наслаждение в каждой капле.</p>
                 </div>
@@ -357,7 +357,7 @@
         <div class="container">
             <h2>Легенда о Султане</h2>
             <div class="content">
-                <img src="sultan.png" alt="Султан" />
+                <img src="images/sultan.png" alt="Султан" />
                 <div>
                     <p>Одним из первых гостей кафе был <strong>полосатый кот с умными глазами</strong>. Он вошел в сад, осмотрелся, выбрал <strong>самую мягкую подушку</strong> и уснул.</p>
                     <p>Так у нас появился первый настоящий <strong>«хозяин» – Султан</strong>.</p>
