--- a/restaurant/templates/log_in_page.html
+++ b/restaurant/templates/log_in_page.html
@@ -5,6 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Регистрация/Вход</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&family=Reem+Kufi&display=swap" rel="stylesheet">
+
+    <style> 
+        /* Основные стили */ 
+        body { 
+            font-family: 'Montserrat Alternates', sans-serif; 
+            margin: 0; 
+            padding: 0; 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+            height: 100vh; 
+            background-color: rgba(0, 0, 0, 0.5); 
+        } 
+ 
+        .modal { 
+            position: fixed; 
+            top: 50%; 
+            left: 50%; 
+            transform: translate(-50%, -50%); 
+            background-color: white; 
+            padding: 20px; 
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+            border-radius: 10px; 
+            width: 300px; 
+            text-align: center; 
+        } 
+ 
+        .header { 
+            display: flex; 
+            justify-content: space-between; 
+            margin-bottom: 20px; 
+        } 
+ 
+        .header div { 
+            cursor: pointer; 
+        } 
+ 
+        .header .active { 
+            font-size: 30px; 
+        } 
+ 
+        .header .inactive { 
+            font-size: 30px; 
+            font-family: 'Reem Kufi', sans-serif; 
+            opacity: 0.5; 
+        } 
+ 
+        .form { 
+            display: none; 
+        } 
+ 
+        .form.active { 
+            display: block; 
+        } 
+ 
+        input { 
+            width: 90%; 
+            padding: 10px; 
+            margin: 10px 0; 
+            border: 1px solid #ccc; 
+            border-radius: 5px; 
+        } 
+ 
+        button { 
+            width: 100%; 
+            padding: 10px; 
+            background-color: #4e4a40; 
+            color: white; 
+            border: none; 
+            border-radius: 5px; 
+            cursor: pointer; 
+            font-size: 15px; 
+            font-family:  'Montserrat Alternates', sans-serif; 
+        } 
+ 
+        button:hover { 
+            background-color: #E87D09; 
+        } 
+    </style>
+    
 </head>
 <body>
 
