--- a/restaurant/templates/personal_page.html
+++ b/restaurant/templates/personal_page.html
@@ -11,11 +11,11 @@
             margin: 0; 
             padding: 0; 
             background-size: 50%; 
-            background-image: url('background1.png'); 
+            background-image: url('images/background1.png'); 
         } 
  
         .header { 
-            background-image: url('background.png'); 
+            background-image: url('images/background.png'); 
             background-size: cover; 
             background-position: center; 
             color: black; 
@@ -118,7 +118,7 @@
     <header class="header">
         <div class="header-content">
             <h1 class="header-title">Kişisel hesap</h1>
-            <img src="cat.svg" alt="Cat" class="header-image">
+            <img src="images/cat.svg" alt="Cat" class="header-image">
         </div>
         <h2 class="header-subtitle">Личный кабинет</h2>
     </header>
@@ -151,13 +151,13 @@
         </div> 
         <div class="event-cards"> 
             <div class="event-card"> 
-                <img src="event1.jpg" alt="Event 1"> 
+                <img src="images/event1.jpg" alt="Event 1"> 
                 <h4>Скидка 20% на все блюда</h4> 
                 <p>Только в этом месяце получите скидку 20% на все блюда в нашем ресторане!</p> 
                 <span class="event-date">До 31 октября</span> 
             </div> 
             <div class="event-card"> 
-                <img src="event2.jpg" alt="Event 2"> 
+                <img src="images/event2.jpg" alt="Event 2"> 
                 <h4>Вечер живой музыки</h4> 
                 <p>Приходите и наслаждайтесь вечером живой музыки каждую пятницу с 19:00 до 22:00.</p> 
                 <span class="event-date">Каждую пятницу</span> 
