--- a/restaurant/templates/personal_page.html
+++ b/restaurant/templates/personal_page.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -6,16 +7,28 @@
     <title>Личный кабинет</title>
 
     <style> 
+        @import url('https://fonts.googleapis.com/css2?family=Reem+Kufi&display=swap');
+
+        /* Подключение SK Moralist вручную */
+        @font-face {
+            font-family: 'SK Moralist';
+            src: url("{% static 'fonts/sk-moralist.woff2' %}") format('woff2'),
+                 url("{% static 'fonts/sk-moralist.woff' %}") format('woff');
+            font-weight: normal;
+            font-style: normal;
+            unicode-range: U+0400-04FF; /* Только для кириллицы */
+        }
+
         body { 
             font-family: Arial, sans-serif; 
             margin: 0; 
             padding: 0; 
             background-size: 50%; 
-            background-image: url('images/background1.png'); 
+            background-image: url("{% static 'images/background1.png' %}"); 
         } 
  
         .header { 
-            background-image: url('images/background.png'); 
+            background-image: url("{% static 'images/background.png' %}"); 
             background-size: cover; 
             background-position: center; 
             color: black; 
@@ -44,7 +57,7 @@
         } 
  
         .header-subtitle { 
-            font-family: 'sk moralist', sans-serif; 
+            font-family: 'SK Moralist', sans-serif; 
             font-size: 50px; 
             margin: 20px 0 0 0; 
         } 
@@ -65,6 +78,17 @@
             font-size: 30px; 
             margin: 10px 0 0 0; 
         } 
+
+        .nav-right a {
+        font-family: 'sk moralist', sans-serif; /* Используй тот же шрифт, что и для заголовка */
+        font-size: 30px; /* Настроить размер шрифта, если нужно */
+        color: black; /* Цвет текста, чтобы он был виден на фоне */
+        text-decoration: none; /* Убирает подчеркивание */
+        }
+
+        .nav-right a:hover {
+            text-decoration: underline; /* Добавить подчеркивание при наведении */
+        }
  
         .dishes, .event-cards { 
             display: flex; 
@@ -118,7 +142,10 @@
     <header class="header">
         <div class="header-content">
             <h1 class="header-title">Kişisel hesap</h1>
-            <img src="images/cat.svg" alt="Cat" class="header-image">
+            <img src="{% static 'images/cat.svg' %}" alt="Cat" class="header-image">            
+        </div>
+        <div class="nav-right">
+            <a href="{% url 'login_page' %}">Вход/Регистрация</a>
         </div>
         <h2 class="header-subtitle">Личный кабинет</h2>
     </header>
@@ -151,13 +178,13 @@
         </div> 
         <div class="event-cards"> 
             <div class="event-card"> 
-                <img src="images/event1.jpg" alt="Event 1"> 
+                <img src="{% static 'images/event1.jpg' %}" alt="Event 1"> 
                 <h4>Скидка 20% на все блюда</h4> 
                 <p>Только в этом месяце получите скидку 20% на все блюда в нашем ресторане!</p> 
                 <span class="event-date">До 31 октября</span> 
             </div> 
             <div class="event-card"> 
-                <img src="images/event2.jpg" alt="Event 2"> 
+                <img src="{% static 'images/event2.jpg' %}" alt="Event 2"> 
                 <h4>Вечер живой музыки</h4> 
                 <p>Приходите и наслаждайтесь вечером живой музыки каждую пятницу с 19:00 до 22:00.</p> 
                 <span class="event-date">Каждую пятницу</span> 
