Изменено главная страница

--- a/restaurant/templates/main_page.html
+++ b/restaurant/templates/main_page.html
@@ -13,7 +13,7 @@
         @font-face {
             font-family: 'SK Moralist';
             src: url("{% static 'fonts/sk-moralist.woff2' %}") format('woff2'),
-                 url("{% static 'fonts/sk-moralist.woff' %}") format('woff'),
+                 url("{% static 'fonts/sk-moralist.woff' %}") format('woff');
             font-weight: normal;
             font-style: normal;
             unicode-range: U+0400-04FF; /* Только для кириллицы */
